# telemetry-tap

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_exe.py  coverage.txt  pyproject.toml  repository.json  repository.yaml  run_tests.bat  run_tests.py  telemetry-tap.spec  telemetry.json
.github/: Dockerfile.arm64-test
.github/workflows/: test.yml
addons/telemetry-tap/: config.yaml
config/: example.cfg  local.cfg
telemetry-tap/: CHANGELOG.md  Dockerfile  config.yaml  run.sh
telemetry_tap/: __init__.py  collector.py  config.py  logging_utils.py  main.py  mqtt_client.py  schema.py
telemetry_tap/schemas/: hwmon-exporter.schema.json
tests/: README.md  __init__.py  conftest.py  test_collector_freebsd.py  test_collector_windows.py  test_librehardwaremonitor.py  test_time_server.py  test_windows_integration.py
