[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-tap"
version = "0.1.0"
description = "Cross-platform hardware telemetry exporter publishing JSON payloads over MQTT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Telemetry Tap" }]
keywords = ["telemetry", "hardware", "mqtt", "monitoring"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "psutil>=5.9.8",
  "paho-mqtt>=1.6.1",
  "jsonschema>=4.21.1",
]

[project.scripts]
telemetry-tap = "telemetry_tap.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telemetry_tap*"]

[tool.setuptools]
package-dir = {"" = "."}
package-data = {"telemetry_tap" = ["schemas/*.json"]}
