[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-tap"
version = "0.1.0"
description = "Cross-platform hardware telemetry exporter publishing JSON payloads over MQTT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Telemetry Tap" }]
keywords = ["telemetry", "hardware", "mqtt", "monitoring"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "psutil>=5.9.4",
  "paho-mqtt>=1.6.1",
  "jsonschema>=4.10.3,<4.18.0",
  "colorlog>=6.7.0",
]

[project.scripts]
telemetry-tap = "telemetry_tap.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["telemetry_tap*"]

[tool.setuptools]
package-dir = {"" = "."}
package-data = {"telemetry_tap" = ["schemas/*.json"]}

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-mock>=3.11.1",
  "pytest-cov>=4.1.0",
]
build = [
  "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
]
markers = [
  "windows: tests specific to Windows platform",
  "linux: tests specific to Linux platform",
  "integration: integration tests requiring full setup",
]
